[package]
name = "bliss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.2", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.27.0", features = ["full"] }
